add_executable(example01 example01.cc)
add_dune_alberta_flags(example01)
add_executable(example02 example02.cc)
add_dune_alberta_flags(example02)
add_executable(example03 example03.cc)
add_dune_alberta_flags(example03)
add_executable(example04 example04.cc)
add_dune_alberta_flags(example04)
add_executable(example05 example05.cc)
add_dune_alberta_flags(example05)
add_executable(example06 example06.cc)
add_dune_alberta_flags(example06)
add_executable(example07 example07.cc)

set(CLEANFILES  dgfparser.log q1*.vtu *.vtu *.png)
