# $Id: duneproject 5425 2009-02-10 09:31:08Z sander $

# possible options
#LDADD = $(UG_LDFLAGS) $(AMIRAMESH_LDFLAGS) $(UG_LIBS) $(AMIRAMESH_LIBS)
#AM_CPPFLAGS = $(UG_CPPFLAGS) $(AMIRAMESH_CPPFLAGS)
dist_noinst_DATA =

GRIDDIM=2


noinst_PROGRAMS =				\
	example01				\
	example02				\
	example03				\
	example04				\
	example05				\
	example06				\
	example07

#	novlp_test

#	dnaplfvamg
noinst_HEADERS =				\
	example01_main.hh			\
	example01a_Qk.hh			\
	example01a_RT.hh			\
	example01a_operator.hh			\
	example01b_Q2.hh			\
	example01b_operator.hh			\
	example02_Q1.hh				\
	example02_bcextension.hh		\
	example02_bctype.hh			\
	example02_operator.hh			\
	example03_Q2.hh				\
	example03_bcextension.hh		\
	example03_bctype.hh			\
	example03_operator.hh			\
	example03_toperator.hh			\
	example04.hh				\
	example04_operator.hh			\
	example05_QkQk.hh			\
	example05_initial.hh			\
	example05_operator.hh			\
	example05_toperator.hh			\
	example06_Q1Q1.hh			\
	example06_bctype.hh			\
	example07_adaptivity.hh			\
	example07_error_indicator.hh

# novlp_test_SOURCES = novlp_test.cc
# novlp_test_CXXFLAGS = $(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS) \
# $(DUNEMPICPPFLAGS) $(UG_CPPFLAGS) $(AMIRAMESH_CPPFLAGS) \
# $(ALBERTA_CPPFLAGS) $(ALUGRID_CPPFLAGS) $(PARMETIS_CPPFLAGS)
# novlp_test_LDADD = $(PARMETIS_LIBS) $(DUNEMPILDFLAGS) $(DUNEMPILIBS) \
# $(SUPERLU_LIBS) $(ALBERTA_LDFLAGS) $(ALBERTA_LIBS) \
# $(AMIRAMESH_LDFLAGS) $(AMIRAMESH_LIBS) $(UG_LDFLAGS) $(UG_LIBS) \
# $(ALUGRID_LDFLAGS) $(ALUGRID_LIBS) $(DUNE_LDFLAGS) $(DUNE_LIBS)
# novlp_test_LDFLAGS= $(AM_LDFLAGS) $(SUPERLU_LDFLAGS) $(PARMETIS_LDFLAGS)
# novlp_test_CPPFLAGS=$(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS)


example01_SOURCES = example01.cc
example01_CXXFLAGS = $(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS) $(DUNEMPICPPFLAGS) $(UG_CPPFLAGS) $(AMIRAMESH_CPPFLAGS) $(ALBERTA_CPPFLAGS) $(ALUGRID_CPPFLAGS)
example01_LDADD = $(DUNEMPILDFLAGS) $(DUNEMPILIBS) $(SUPERLU_LIBS) $(ALBERTA_LDFLAGS) $(ALBERTA_LIBS) $(AMIRAMESH_LDFLAGS) $(AMIRAMESH_LIBS) $(UG_LDFLAGS) $(UG_LIBS) $(ALUGRID_LDFLAGS) $(ALUGRID_LIBS) $(DUNE_LDFLAGS) $(DUNE_LIBS)
example01_LDFLAGS= $(AM_LDFLAGS) $(SUPERLU_LDFLAGS)
example01_CPPFLAGS=$(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS)

example02_SOURCES = example02.cc
example02_CXXFLAGS = $(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS) $(DUNEMPICPPFLAGS) $(UG_CPPFLAGS) $(AMIRAMESH_CPPFLAGS) $(ALBERTA_CPPFLAGS) $(ALUGRID_CPPFLAGS)
example02_LDADD = $(DUNEMPILDFLAGS) $(DUNEMPILIBS) $(SUPERLU_LIBS) $(ALBERTA_LDFLAGS) $(ALBERTA_LIBS) $(AMIRAMESH_LDFLAGS) $(AMIRAMESH_LIBS) $(UG_LDFLAGS) $(UG_LIBS) $(ALUGRID_LDFLAGS) $(ALUGRID_LIBS) $(DUNE_LDFLAGS) $(DUNE_LIBS)
example02_LDFLAGS= $(AM_LDFLAGS) $(SUPERLU_LDFLAGS)
example02_CPPFLAGS=$(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS)

example03_SOURCES = example03.cc
example03_CXXFLAGS = $(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS) $(DUNEMPICPPFLAGS) $(UG_CPPFLAGS) $(AMIRAMESH_CPPFLAGS) $(ALBERTA_CPPFLAGS) $(ALUGRID_CPPFLAGS)
example03_LDADD = $(DUNEMPILDFLAGS) $(DUNEMPILIBS) $(SUPERLU_LIBS) $(ALBERTA_LDFLAGS) $(ALBERTA_LIBS) $(AMIRAMESH_LDFLAGS) $(AMIRAMESH_LIBS) $(UG_LDFLAGS) $(UG_LIBS) $(ALUGRID_LDFLAGS) $(ALUGRID_LIBS) $(DUNE_LDFLAGS) $(DUNE_LIBS)
example03_LDFLAGS= $(AM_LDFLAGS) $(SUPERLU_LDFLAGS)
example03_CPPFLAGS=$(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS)

example04_SOURCES = example04.cc
example04_CXXFLAGS = $(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS) $(DUNEMPICPPFLAGS) $(UG_CPPFLAGS) $(AMIRAMESH_CPPFLAGS) $(ALBERTA_CPPFLAGS) $(ALUGRID_CPPFLAGS)
example04_LDADD = $(DUNEMPILDFLAGS) $(DUNEMPILIBS) $(SUPERLU_LIBS) $(ALBERTA_LDFLAGS) $(ALBERTA_LIBS) $(AMIRAMESH_LDFLAGS) $(AMIRAMESH_LIBS) $(UG_LDFLAGS) $(UG_LIBS) $(ALUGRID_LDFLAGS) $(ALUGRID_LIBS) $(DUNE_LDFLAGS) $(DUNE_LIBS)
example04_LDFLAGS= $(AM_LDFLAGS) $(SUPERLU_LDFLAGS)
example04_CPPFLAGS=$(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS)

example05_SOURCES = example05.cc
example05_CXXFLAGS = $(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS) $(DUNEMPICPPFLAGS)
example05_LDADD = $(DUNEMPILDFLAGS) $(DUNEMPILIBS) $(SUPERLU_LIBS) $(DUNE_LDFLAGS) $(DUNE_LIBS)
example05_LDFLAGS= $(AM_LDFLAGS) $(SUPERLU_LDFLAGS)
example05_CPPFLAGS=$(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS)

example06_SOURCES = example06.cc
example06_CXXFLAGS = $(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS) $(DUNEMPICPPFLAGS) $(UG_CPPFLAGS) $(AMIRAMESH_CPPFLAGS) $(ALBERTA_CPPFLAGS) $(ALUGRID_CPPFLAGS)
example06_LDADD = $(DUNEMPILDFLAGS) $(DUNEMPILIBS) $(SUPERLU_LIBS) $(ALBERTA_LDFLAGS) $(ALBERTA_LIBS) $(AMIRAMESH_LDFLAGS) $(AMIRAMESH_LIBS) $(UG_LDFLAGS) $(UG_LIBS) $(ALUGRID_LDFLAGS) $(ALUGRID_LIBS) $(DUNE_LDFLAGS) $(DUNE_LIBS)
example06_LDFLAGS= $(AM_LDFLAGS) $(SUPERLU_LDFLAGS)
example06_CPPFLAGS=$(AM_CPPFLAGS) $(SUPERLU_CPPFLAGS)

example07_SOURCES = example07.cc
example07_LDADD =				\
	$(ALUGRID_LIBS)				\
	$(UG_LIBS)				\
	$(DUNEMPILIBS)				\
	$(SUPERLU_LIBS)				\
	$(LDADD)
example07_LDFLAGS = $(AM_LDFLAGS)		\
	$(SUPERLU_LDFLAGS)			\
	$(DUNEMPILDFLAGS)			\
	$(UG_LDFLAGS)				\
	$(ALUGRID_LDFLAGS)
example07_CPPFLAGS = $(AM_CPPFLAGS)		\
	$(SUPERLU_CPPFLAGS)			\
	$(DUNEMPICPPFLAGS)			\
	$(UG_CPPFLAGS)				\
	-DDUNE_DEVEL_MODE			\
	$(ALUGRID_CPPFLAGS)

CLEANFILES = dgfparser.log q1*.vtu *.vtu *.png

#============================================================
# pass most important options when "make distcheck" is used
DISTCHECK_CONFIGURE_FLAGS = --with-dune-common=$(DUNE_COMMON_ROOT) --with-dune-grid=$(DUNE_GRID_ROOT) --with-dune-istl=$(DUNE_ISTL_ROOT) --with-dune-localfunctions=$(DUNE_LOCALFUNCTIONS_ROOT) --with-dune-pdelab=$(DUNE_PDELAB_ROOT)  CXX="$(CXX)" CC="$(CC)"

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
