add_executable(parallelgfs parallelgfs.cc)
add_dune_alberta_flags(parallelgfs)
add_executable(q1gridfunctionspacemain q1gridfunctionspacemain.cc)
add_dune_alberta_flags(q1gridfunctionspacemain )
add_executable(q1interpolatemain q1interpolatemain.cc)
add_dune_alberta_flags(q1interpolatemain)
add_executable(q1interpolationerrormain q1interpolationerrormain.cc)
add_dune_alberta_flags(q1interpolationerrormain)
add_executable(q2interpolationerrormain q2interpolationerrormain.cc)
add_dune_alberta_flags(q2interpolationerrormain)
add_executable(q1constrainedinterpolatemain q1constrainedinterpolatemain.cc)
add_dune_alberta_flags(q1constrainedinterpolatemain)
add_executable(thinterpolatemain thinterpolatemain.cc)
add_dune_alberta_flags(thinterpolatemain)

set(CLEANFILES  dgfparser.log q1*.vtu *.vtu *.png)
